[gd_scene load_steps=9 format=3 uid="uid://bhy7jvmxqgamn"]

[ext_resource type="Texture2D" uid="uid://dibp3l0y2j4bp" path="res://sunny-land/assets/sprites/GameOver.png" id="1_6onuj"]
[ext_resource type="Script" path="res://game_over.gd" id="1_cwuiu"]
[ext_resource type="Theme" uid="uid://bggh3lkw4p7y" path="res://Themes/my_theme.tres" id="2_2bfur"]
[ext_resource type="FontVariation" uid="uid://c5j8rv16ksqvn" path="res://Font/Line spacing.tres" id="3_7tful"]

[sub_resource type="Animation" id="Animation_a72a1"]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.231373), Color(1, 1, 1, 0.4), Color(1, 1, 1, 0.568627), Color(1, 1, 1, 0.729412), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u87dw"]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.85098), Color(1, 1, 1, 0.776471), Color(1, 1, 1, 0.584314), Color(1, 1, 1, 0.270588), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jyyo4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jfvtg"]
_data = {
"FadeIn": SubResource("Animation_a72a1"),
"FadeOut": SubResource("Animation_u87dw"),
"RESET": SubResource("Animation_jyyo4")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_cwuiu")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0666667, 0, 0.172549, 1)

[node name="GameOver" type="Sprite2D" parent="ColorRect"]
position = Vector2(611, 362)
scale = Vector2(0.877149, 0.975694)
texture = ExtResource("1_6onuj")

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.124132
anchor_top = 0.57716
anchor_right = 0.875868
anchor_bottom = 0.787037
offset_bottom = -3.05176e-05
theme_override_constants/separation = 31
metadata/_edit_use_anchors_ = true

[node name="PlayAgain" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_2bfur")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_7tful")
theme_override_font_sizes/font_size = 40
text = "Play Again?"
expand_icon = true

[node name="Main Menu" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_2bfur")
theme_override_font_sizes/font_size = 40
text = "Main Menu"
expand_icon = true

[node name="Quit" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_2bfur")
theme_override_font_sizes/font_size = 40
text = "Quit"
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jfvtg")
}

[connection signal="pressed" from="ColorRect/HBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
